@@ -399,7 +399,7 @@ CREATE OPERATOR <= (
 CREATE OPERATOR = (
 	LEFTARG = geometry, RIGHTARG = geometry, PROCEDURE = geometry_eq,
 	COMMUTATOR = '=', -- we might implement a faster negator here
-	RESTRICT = contsel, JOIN = contjoinsel
+	RESTRICT = contsel, JOIN = contjoinsel, HASHES, MERGES
 );
 
 -- Availability: 0.9.0
