@@ -179,6 +179,7 @@ PostGIS 3.0.0
   - #4388, AddRasterConstraints: Ignore NULLs when generating constraints (Raúl Marín)
   - #4327, Avoid pfree'ing the result of getenv (Raúl Marín)
   - #4406, Throw on invalid characters when decoding geohash (Raúl Marín)
+  - #4394, Allow FULL OUTER JOIN on geometry (Darafei Praliaskouski)
 
 
 PostGIS 2.5.0
